# rusthub

./: .gitignore  LICENSE  README.md
auth/src/: main.rs
backyard/src/: garden.rs  main.rs
bevy_chess/: Cargo.toml
bevy_chess/src/: board.rs  constant.rs  main.rs  pieces.rs
bevy_farm/: Cargo.toml
bevy_farm/src/: main.rs  pig.rs  res.rs  ui.rs
bevy_farm/src/res/: ints.rs  size.rs  sprite.rs
bevy_learn/: Cargo.toml
bevy_learn/assets/models/k_11/: GZ_K11.gltf
bevy_learn/examples/: alien_eat.rs  building_town.rs  control_camera.rs  ecs_close.rs  fall_ball.rs  farm.rs  gltf_load.rs  pbr_light.rs  simple_query.rs  sprite_sheet.rs  watch_dial.rs
closure/: Cargo.toml
closure/src/: main.rs
cnos_classes/: Cargo.toml
cnos_classes/examples/: From.rs  array_copy_trait.rs  asynfun.rs  channel.rs  closure.rs  cloure.rs  cmd.rs  deepinrust.rs  eq_ord.rs  err.rs  fn.rs  generics.rs  (+21 more)
copy_trait/: Cargo.toml
hash_map_sample/: Cargo.toml
hello/: Cargo.toml
hello/src/: accumulate.rs  acronym.rs  advent_2025_12.rs  all_your_base.rs  allergies.rs  alphabet_war.rs  anagram.rs  beer_song.rs  binary_search.rs  block.rs  bob_robot.rs  break_camel_case.rs  check_sublist.rs  circular_buffer.rs  clock.rs  closest_pair.rs  color_choice.rs  consec_kprimes.rs  container_with_most_water.rs  convert_matrix.rs  convert_string_to_camel_case.rs  count_ip_addresses.rs  count_patterns.rs  custom_set.rs  difference_of_squares.rs  diffie_hellman.rs  duplicate_encoder.rs  equal_sides_of_an_array.rs  etl.rs  fib_n.rs  fibonacci_streaming.rs  find_minimum_in_rotated_sorted_array.rs  find_the_odd_int.rs  fizzy.rs  get_pins.rs  gigasecond.rs  grade_school.rs  grain.rs  hamming.rs  high_scores.rs  (+66 more)
iced_rand_password/: Cargo.toml
makus/: Cargo.toml
minigre/: Cargo.toml  poem.txt
r_thread/: Cargo.toml
rcli/: .gitignore  Cargo.toml
rcli/assets/: barcelona.csv  out.json
rcli/src/: lib.rs  main.rs  opts.rs  process.rs
rcli/src/cmd/: crypto_opt.rs  csv_opt.rs  gen_pass_opt.rs  mod.rs
rcli/src/process/: crypto_process.rs  csv_process.rs  gen_pass_process.rs  mod.rs
rustfinity/: Cargo.toml
structtester/: Cargo.toml
too_lists/: Cargo.toml
traitter/: Cargo.toml
vec_sample/: Cargo.toml
(+63 files in other folders)
