[package]
name = "bevy_chess"
version = "0.1.0"
edition = "2021"
authors = ["Kapaseker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_mod_picking = { version = "0.14.0", git = "https://github.com/bardt/bevy_mod_picking.git", rev = "7ecb60e08735ce82f9ff03ba5adb434c1e336afd" }
#bevy_egui = "0.21.0"
#bevy_ui = "0.21.0"
#bevy_rapier3d = "0.22.0"
#taffy = "=0.3.8"
