[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
time-macros = "0.2"
unicode-segmentation = "1.11"
regex = "1.10"
num = "0.4"
rand = "0.9"
threadpool = "1.8"
serde_json = "1.0"

[features]