[package]
name = "rcli"
version = "0.1.0"
authors = ["kapaseker <kapaseker@163.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
sha2 = "0.10.9"
sha1 = "0.10.6"
md-5 = "0.10.6"
hex = "0.4.3"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"


